-- Fixed alignment issues and added the title bars to the viewers, initially

--- a/src/css/sequenceViewer.css
+++ b/src/css/sequenceViewer.css
@@ -1,5 +1,5 @@
 #sequenceViewer {
-    height: 37%;
+    height: 35%;
     overflow-y: hidden;
     overflow-x: hidden;
     margin-right: 0;
